--- a/software_components/app_server/ampa_members_manager_project/requirements.txt
+++ b/software_components/app_server/ampa_members_manager_project/requirements.txt
@@ -1,5 +1,6 @@
-django==4.0.3
-model-bakery==1.4.0
+django==4.0.5
+model-bakery==1.5.0
 django-localflavor==3.1
-phonenumbers==8.12.45
+schwifty==2022.4.2
+phonenumbers==8.12.49
 django-phonenumber-field[phonenumbers]==6.1.0
