--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .idea
 *.pyc
+software_components/app_server/ampa_members_manager_project/ampa_members_manager_project/almacen-datos-django-fd12fbec5701.json
