--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .idea
 *.pyc
 software_components/app_server/ampa_members_manager_project/ampa_members_manager_project/almacen-datos-django-fd12fbec5701.json
+*.log
