--- a/software_components/app_server/ampa_members_manager_project/requirements.txt
+++ b/software_components/app_server/ampa_members_manager_project/requirements.txt
@@ -6,3 +6,4 @@ phonenumbers==8.12.51
 django-phonenumber-field[phonenumbers]==6.3.0
 django-modeladmin-reorder==0.3.1
 xlrd==2.0.1
+django-extensions==3.2.1
