import utils refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 software_components/app_server/ampa_members_manager_project/ampa_members_manager_project/almacen-datos-django-fd12fbec5701.json
 *.log
 *.xls
+*.xlsx
