--- a/software_components/app_server/ampa_members_manager_project/requirements.txt
+++ b/software_components/app_server/ampa_members_manager_project/requirements.txt
@@ -7,3 +7,4 @@ django-phonenumber-field[phonenumbers]==6.3.0
 django-modeladmin-reorder==0.3.1
 xlrd==2.0.1
 django-extensions==3.2.1
+Unidecode==1.3.6
