feat: update Django and add xsdata

--- a/software_components/app_server/ampa_members_manager_project/requirements.txt
+++ b/software_components/app_server/ampa_members_manager_project/requirements.txt
@@ -1,4 +1,4 @@
-django==4.0.6
+django==4.1.5
 model-bakery==1.6.0
 django-localflavor==3.1
 schwifty==2022.7.0
@@ -7,3 +7,4 @@ django-phonenumber-field[phonenumbers]==6.3.0
 django-modeladmin-reorder==0.3.1
 xlrd==2.0.1
 django-extensions==3.2.1
+xsdata==22.12
