--- a/software_components/app_server/ampa_members_manager_project/requirements.txt
+++ b/software_components/app_server/ampa_members_manager_project/requirements.txt
@@ -2,7 +2,7 @@ django==4.2
 model-bakery==1.11.0
 django-localflavor==3.1
 schwifty==2023.3.0
-phonenumbers==8.13.8
+phonenumbers==8.13.9
 django-phonenumber-field[phonenumbers]==7.0.2
 django-modeladmin-reorder==0.3.1
 xlrd==2.0.1
@@ -10,3 +10,4 @@ django-extensions==3.2.1
 xsdata==22.12
 Unidecode==1.3.6
 pandas==2.0.0
+openpyxl
