--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.pyc
 software_components/app_server/ampa_members_manager_project/ampa_members_manager_project/almacen-datos-django-fd12fbec5701.json
 *.log
+.env
